--- a/src/11-curry化.html
+++ b/src/11-curry化.html
@@ -30,7 +30,7 @@
   使用两个案例来说明
   */
   /*1判断元素
-   Vue本质上是使用HTML的字符串作为模板的，将字符串的模板转换为AST 再转换为VNode
+   Vue本质上是使用HTML的字符串作为模板的，将字符串的模板转换为AST(抽象语法树) 再转换为VNode
    一阶段 模板——>>AST
    二阶段 AST——>>VNode
    三阶段 VNode——>>DOM
@@ -42,7 +42,7 @@
   /* 
   在Vue中每一个标签可以是是真正的HTML标签，也可以是自定义组件，问怎么区分?
   在Vue的源码中，将所有可用的HTML标签已经存起来了，然后遍历去判断一个标签是否为HTML标签
-  假设这里只考虑几个标签：
+  假设这里只考虑几个标签： 
   */
   let tags = 'div,p,a,img,ul,li'.split(',');
   // 需要一个函数，来判断是否为内置的标签
@@ -80,14 +80,15 @@
 
   思考： vue项目模板 转换为抽象语法树需要执行几次？？？
 
+提示：
   -页面一开始加载需要渲染
   -每一个属性（响应式）数据在发生变化的时候都要渲染
   -watch， computed等等
 
-  render 的性作用是将虚拟DOM转换为真正的DOM加到页面中
+  render 的作用是将虚拟DOM转换为真正的DOM加到页面中
 
 
-  -虚拟DOM可以简单的理解为AST（抽象语法树）
+  虚拟DOM可以简单的理解为AST（抽象语法树）
   一个项目运行的时候，模板是不会变的，就表示AST是不会变的
 
   可以将代码进行优化，将虚拟DOM缓存起来， 生成一个函数，函数只需要传入数据，就可以得到真正的DOM
