发布订阅模式

--- a/src/18-处理数组响应化的问题.html
+++ b/src/18-处理数组响应化的问题.html
@@ -119,8 +119,8 @@
       reactify(data);
 
 
-      // 已经将对象改为响应式的了，但是如果直接给对象赋值，赋值另一个对象，那么就不是响应式了，应该怎么办
-      
+      // 已经将对象改为响应式的了，但是如果直接给对象赋值，赋值为另一个对象，那么就不是响应式了，应该怎么办？
+      // 学习数组的方法？
     </script>
   </body>
 </html>
